--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -12,6 +12,7 @@
 
     <!-- Bootstrap core CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.1.0/cosmo/bootstrap.min.css">
 
     <!-- Custom styles for this template -->
     <link href="/css/starter_template.css" rel="stylesheet">
@@ -19,23 +20,9 @@
 
   <body>
 
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-      <a class="navbar-brand" href="#">Twitter</a>
-    </nav>
-
-    <main role="main" class="container">
-
-      <div class="starter-template">
-        <h1>Join and follow Celebreties and Entrepreneurs</h1>
-        <p class="lead">Sign up and enjoy a new social experience.</p>
-      </div>
-
-      <div class="col-md-4 m-auto">
-            <a href="/signup" class="btn btn-primary btn-lg">Signup</a>
-            <a href="/signin" class="btn btn-primary btn-lg">Signin</a>
-      </div>
-
-    </main><!-- /.container -->
+    {{> navbar}}
+    {{{ body }}}
+    <!-- /.container -->
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
